infra/K8S/bid-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bid-svc
spec:
  selector:
    matchLabels:
      app: bid-svc
  template:
    metadata:
      labels:
        app: bid-svc
    spec:
      containers:
      - name: bid-svc
        image: nmprog/bid-svc
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: bid-clusterip
spec:
    type: ClusterIP
    selector:
        app: bid-svc
    ports:
    - port: 80
      targetPort: 80
