infra/K8S/identity-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: identity-svc
spec:
  selector:
    matchLabels:
      app: identity-svc
  template:
    metadata:
      labels:
        app: identity-svc
    spec:
      containers:
      - name: identity-svc
        image: nmprog/identity-svc
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: identity-clusterip
spec:
    type: ClusterIP
    selector:
        app: identity-svc
    ports:
    - port: 80
      targetPort: 80
