infra/K8S/notify-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: notify-svc
spec:
  selector:
    matchLabels:
      app: notify-svc
  template:
    metadata:
      labels:
        app: notify-svc
    spec:
      containers:
      - name: notify-svc
        image: nmprog/notify-svc
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: notify-clusterip
spec:
    type: ClusterIP
    selector:
        app: notify-svc
    ports:
    - port: 80
      targetPort: 80
