infra/K8S/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-svc
    labels:
      app: ingress-svc
spec:
    ingressClassName: nginx
    tls:
      - hosts:
        - app.carsauction.local
        - api.carsauction.local
        - id.carsauction.local
        secretName: carsauction-app-tls
    rules:
    - host: app.carsauction.local
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: webapp-clusterip
              port:
                number: 3000
    - host: api.carsauction.local
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: gateway-clusterip
              port:
                number: 80
    - host: id.carsauction.local
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: identity-clusterip
              port:
                number: 80
